# Sequence-Generator

./: .gitignore  .local-dir.el  CMakeLists.txt  README.org
include/: ASTManager.hh  MethodScrapper.hh  ProtoVisitor.hh  SymbolTable.hh
src/: CMakeLists.txt  MethodScrapper.cc  ProtoVisitor.cc  SymbolTable.cc  main.cc
test/: CMakeLists.txt
test_code/: ClassA.cc  ClassA.hh  ClassB.cc  ClassB.hh  Makefile
test_code/include/: ClassB.hh
visitor/: ASTImporterDemo.cc  ASTMerger.cc  CMakeLists.txt  FindClassDecls.cc  ProtoVisitor.cc
